# Real-Time-Object-Detection

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  web_app.py
.github/workflows/: ci.yml
examples/: basic_detection.py  benchmark.py  tracking_demo.py  video_processing.py
src/: __init__.py  config.py  detector.py  optimizer.py  tracker.py  utils.py
templates/: index.html
tests/: __init__.py  test_detector.py  test_utils.py
